# MapEditor

./: .vscode  CMakeLists.txt  LICENSE.md  README.md
.vscode_lin/: c_cpp_properties.json  launch.json  settings.json  tasks.json
.vscode_win/: c_cpp_properties.json  launch.json  tasks.json
data/: map1.json  map2.json  map3.json
resources/: resources.qrc
src/: CMainView.cpp  CMainView.h  CMainWindow.cpp  CMainWindow.h  CMap.cpp  CMap.h  CMapPreferencesDialog.cpp  CMapPreferencesDialog.h  CTilesetSettingsDialog.cpp  CTilesetSettingsDialog.h  Constants.h  main.cpp  resources.rc
